# workerpool

./: Cargo.toml  README.md
src/: lib.rs  pool.rs
tests/: integration.rs
