[package]
name = "workerpool-rs"
version = "0.2.1"
authors = ["jcbritobr <jcbritobr@gmail.com>"]
edition = "2018"
repository = "https://github.com/jcbritobr/workerpool"
homepage = "https://github.com/jcbritobr/workerpool"
description = "A simple workerpool for rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
